--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,46 @@
 
-/* 
+body{
+    margin-top: 100px;
+}
 
-    You can write your own styles here...
+ul li{
+    border: 1px solid grey;
+    list-style: none;
+    padding: 5px;
     
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
 
-*/
+ul{
+    padding-right: 40px;
+    margin-bottom: 0px;
+    width: 50%  ;
+   
+}
+
+h1{
+    text-align: center;
+    
+}
+input{border: none; }
+
+.bi-x-circle{
+    float: right;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh; 
+    
+  }
+
+  .custom-input {
+    width: 300%; /* Adjust as needed (e.g., 300px, 50%) */
+    max-width: 600px; /* Optional: set a max-width limit */
+    padding: 10px; /* Optional: adds padding for better usability */
+    border: solid 1px black;
+  }
+  .list-group-item {
+    width: 300%
+  }
